Refactor code for clarity and test correctness
Removed unnecessary variable initialization, streamlined lambda expressions, and ensured consistent use of `getFirst()` in tests for better readability and reliability. Also adjusted assertions for improved logical accuracy.